<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/black_border">

    <com.mikeroelens.emojification.view.PixelatedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/dialog_disable_internet_message"/>

    <com.mikeroelens.emojification.view.PixelatedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:textSize="20sp"
        android:text="@string/dialog_disable_internet_step_1"/>

    <com.mikeroelens.emojification.view.PixelatedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:text="@string/dialog_disable_internet_step_2"/>

    <com.mikeroelens.emojification.view.PixelatedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="20sp"
        android:text="@string/dialog_disable_internet_step_3"/>

    <com.mikeroelens.emojification.view.PixelatedButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        app:backgroundColour="@color/green"
        app:textSize="12sp"
        app:text="@string/dialog_disable_internet_continue"/>
</LinearLayout>