<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_centerHorizontal="true">

    <com.mikeroelens.hungermoji.view.PixelatedTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="75sp"
        android:gravity="center"
        android:text="@string/game_over_screen_game_over"/>

    <TextView
        android:id="@+id/txtExplosionEmoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70dp"
        tools:text="X"
        android:textColor="@android:color/black"
        android:layout_gravity="center" />

    <com.mikeroelens.hungermoji.view.PixelatedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="@string/game_over_screen_you_scored"/>

    <com.mikeroelens.hungermoji.view.PixelatedTextView
        android:id="@+id/txtGameScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="85sp"
        android:text="64"/>

    <com.mikeroelens.hungermoji.view.PixelatedTextView
        android:id="@+id/txtHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:text="@string/game_over_screen_high_score"/>

    <com.mikeroelens.hungermoji.view.PixelatedButton
        android:id="@+id/btnHome"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        app:textSize="17sp"
        app:backgroundColour="@color/green"
        app:text="@string/game_over_screen_home"/>

</LinearLayout>